--------------------------------------------------------------------------------

name:                     reddit
version:                  0.3.0
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Web
copyright:                © Fraser Murray 2013-2015
                        , © Remy Goldschmidt 2017-2018
author:                   Fraser Murray, Remy Goldschmidt
maintainer:               taktoa@gmail.com
license:                  BSD2
license-file:             LICENSE.md
homepage:                 https://github.com/taktoa/reddit
bug-reports:              https://github.com/taktoa/reddit/issues
synopsis:                 Bindings for the Reddit API
description:              A library binding the Reddit API in Haskell.

                          Handles logins, rate-limiting and converting to and
                          from JSON responses.

                          Supports most user-facing Reddit API functions,
                          as well as some moderator endpoints.
extra-source-files:       README.md
                        , CHANGELOG.md
                        , test/data/aboutMe_example.json
                        , test/data/getUserInfo_example.json
                        , test/data/getUserComments_example.json
tested-with:              GHC == 8.0.2

--------------------------------------------------------------------------------

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/taktoa/reddit.git

source-repository this
    type:                 git
    tag:                  release-0.3.0
    location:             https://github.com/taktoa/reddit.git

--------------------------------------------------------------------------------

library
    exposed-modules:      Reddit
                        , Reddit.Actions
                        , Reddit.Actions.Captcha
                        , Reddit.Actions.Comment
                        , Reddit.Actions.Flair
                        , Reddit.Actions.Message
                        , Reddit.Actions.Moderation
                        , Reddit.Actions.Post
                        , Reddit.Actions.Search
                        , Reddit.Actions.Subreddit
                        , Reddit.Actions.Thing
                        , Reddit.Actions.User
                        , Reddit.Actions.Voting
                        , Reddit.Actions.Wiki
                        , Reddit.Login
                        , Reddit.Types
                        , Reddit.Types.Captcha
                        , Reddit.Types.Comment
                        , Reddit.Types.Error
                        , Reddit.Types.Flair
                        , Reddit.Types.Listing
                        , Reddit.Types.Message
                        , Reddit.Types.Moderation
                        , Reddit.Types.Options
                        , Reddit.Types.Post
                        , Reddit.Types.Reddit
                        , Reddit.Types.SearchOptions
                        , Reddit.Types.Subreddit
                        , Reddit.Types.SubredditSettings
                        , Reddit.Types.Thing
                        , Reddit.Types.User
                        , Reddit.Types.Wiki
    other-modules:        Paths_reddit
                        , Reddit.Parser
                        , Reddit.Routes
                        , Reddit.Routes.Captcha
                        , Reddit.Routes.Comment
                        , Reddit.Routes.Flair
                        , Reddit.Routes.Message
                        , Reddit.Routes.Moderation
                        , Reddit.Routes.Post
                        , Reddit.Routes.Search
                        , Reddit.Routes.Subreddit
                        , Reddit.Routes.Thing
                        , Reddit.Routes.User
                        , Reddit.Routes.Vote
                        , Reddit.Routes.Wiki
                        , Reddit.Types.Empty
                        , Reddit.Utilities
    default-language:     Haskell2010
    hs-source-dirs:       src
    build-depends:        base                        >= 4.6    && < 4.10
                        , aeson                       >= 0.9    && < 1.3
                        , api-builder                 >= 0.10   && < 0.14
                        , bytestring                  >= 0.10   && < 0.11
                        , data-default-class          >= 0.0.1  && < 0.2
                        , free                        >= 4.12   && < 4.13
                        , http-client                 >= 0.4.30 && < 0.6
                        , http-client-tls             >= 0.2    && < 0.4
                        , http-types                  >= 0.8    && < 0.10
                        , network                     >= 2.6    && < 2.7
                        , text                        >= 1.2    && < 1.3
                        , time                        >= 1.5    && < 1.9
                        , transformers                >= 0.4    && < 0.6
                        , unordered-containers        >= 0.2.5  && < 0.3
                        , vector                      >= 0.10   && < 0.13
    ghc-options:          -Wall

--------------------------------------------------------------------------------

test-suite test
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test
                        , test-utils
    main-is:              Spec.hs
    default-language:     Haskell2010
    build-depends:        reddit
                        , base                        == 4.*
                        , Cabal                       >= 1.16.0
                        , aeson
                        , api-builder
                        , bytestring
                        , hspec
                        , text
                        , time
                        , transformers
    ghc-options:          -Wall

--------------------------------------------------------------------------------

test-suite test-io
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test-io
                        , test-utils
    main-is:              Spec.hs
    default-language:     Haskell2010
    build-depends:        reddit
                        , base                        == 4.*
                        , Cabal                       >= 1.16.0
                        , api-builder
                        , bytestring
                        , data-default-class
                        , http-client
                        , http-client-tls
                        , reddit
                        , hspec
                        , text
                        , time
                        , transformers
    ghc-options:          -Wall

--------------------------------------------------------------------------------

test-suite test-anon
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test-anon
                        , test-utils
    main-is:              Spec.hs
    default-language:     Haskell2010
    build-depends:        reddit
                        , base                        == 4.*
                        , Cabal                       >= 1.16.0
                        , api-builder
                        , data-default-class
                        , hspec
                        , text
                        , time
                        , transformers
    ghc-options:          -Wall

--------------------------------------------------------------------------------
